# PiFinder

./: .devenv.flake.nix  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  BATTERY_RUNTIME_TEST.md  CLAUDE.md  CONTEXT-MAP.md  MIGRATION_BRANCH_STATE.md  NIXOS_STATUS.md  README-MOUNTCONTROL.md  README.md  README.rst  RELEASE.md  UI_AUTOMATION_API.md  config.json  default_config.json  deploy-image-to-nfs.sh  devenv.nix  flake.nix  handoff.md  indi_disable_alignment.yml  install-indi-pifinder.sh  migrate_db.sql  migration_gate.json  migration_gate.txt  move-to-brickbots.txt  nixos-migration.html  pifinder-build.json  pifinder.service  pifinder.service.template  pifinder_paths.sh  pifinder_post_update.sh  pifinder_setup.sh  pifinder_splash.sh  pifinder_start.sh  pifinder_update.sh  release_manifest.json  requirements.txt  (+14 more)
python/: DEPENDENCIES.md  README_IMU.md  babel.cfg  check_syntax.py  conftest.py  environment_imu.yml  index.tpl  logconf_debug.json  logconf_default.json  logconf_gps.json  logconf_solver.json  logconf_webserver.json  measure_imx462_offset.py  noxfile.py  pifinder_logconf.json  profile_chart.py  profile_loop_rate.py  profile_sqm.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_imu.txt  result  result-lib  selenium.txt  tests.sh  tetra3
python/PiFinder/: api_extensions.py  asteroid_catalog.py  asteroids.py  audit_images.py  auto_exposure.py  battery_bq25895.py  battery_fake.py  battery_telemetry.py  board_config.py  boot_config.py  calc_utils.py  camera.py  camera_asi.py  camera_debug.py  camera_interface.py  camera_interface.py.rej  camera_noise_profiles.py  camera_none.py  camera_pi.py  camera_pi_imx462_12mmlens.py  camera_raw.py  cat_images.py  catalog_base.py  catalog_cache.py  catalog_import.py  catalog_utils.py  catalogs.py  clear_screen.py  comet_catalog.py  comets.py  composite_object.py  config.py  deep_chart.py  dev.py  display_message.py  displays.py  download_utils.py  equipment.py  focus.py  gen_images.py  (+89 more)
python/PiFinder/catalog_imports/: __init__.py  bright_stars_loader.py  caldwell_loader.py  catalog_import_utils.py  database.py  harris_loader.py  herschel_loader.py  lynga_loader.py  main.py  post_processing.py  sac_loaders.py  specialized_loaders.py  steinicke_loader.py  wds.py  wds_loader.py
python/PiFinder/db/: db.py  objects_db.py  observations_db.py
python/PiFinder/develop/: README.md
python/PiFinder/gps/: __init__.py  aiogps.py  client.py  clienthelpers.py  fake.py  gps.py  misc.py  packet.py  watch_options.py
python/PiFinder/migrations/: __init__.py  v2_6_0_dob_flop.py  v2_7_0_sourceless_images.py
python/PiFinder/object_images/: __init__.py  chart_provider.py  gaia_chart.py  image_base.py  image_utils.py  poss_provider.py  star_catalog.py
python/PiFinder/pointing_model/: README.md  astro_coords.py  imu_dead_reckoning.py  imu_dead_reckoning_legacy.py  imu_print_measurements.py  pointing_model.py  quaternion_transforms.py
python/PiFinder/polar_alignment/: __init__.py  benchmark.py  polar_alignment.py  solver.py
python/PiFinder/sqm/: __init__.py  airglow.py  black_level.py  camera_profiles.py  clouds.py  color_index.py  gaia_ref.py  noise_floor.py  pedestal.py  radiometer.py  save_sweep_metadata.py  skyglow_map.py  sqm.py  wings.py
python/PiFinder/types/: coordinates.py  hardware.py  positioning.py  sound.py
python/PiFinder/ui/: align.py  align_daytime.py  base.py  bluetooth_keyboard.py  browsing.py  callbacks.py  camera_render.py  chart.py  (+44 more)
python/SPServer/: main.py  sps_data.py
python/StarParty/: obs_simulator.py  sp_client.py  sp_usernames.py  sps_data.py  sps_main.py
python/indi/: monitor.py
python/indi_poc/: pifinder_to_indi_bridge.py  pyindi.py
python/indi_tools/: EVENT_FORMAT.md  README.md  STRUCTURE.md  __init__.py  dump_properties.py  event_recorder.py  event_replayer.py  monitor.py  pifinder_to_indi_bridge.py  property_factory.py  usage_example.py
python/scripts/: benchmark_sqm_pipeline.py  evaluate_radiometer_archive.py  migration_calc.py  migration_progress  migration_progress.c  nixos_migration.sh  nixos_migration_calc.py  nixos_migration_init.sh  report_sqm_production_archive.py  test_migration_loopdev.sh
python/telemetry_analysis/: drift_analysis.py  flex_analysis.py  imu_freerun.py  session_20260309.jsonl  visualize.py
python/tests/: skysafari.py  test_align_daytime.py  test_api_extensions.py  test_asteroids.py  test_auto_exposure.py  test_battery_charge_status.py  test_battery_config.py  test_battery_decode.py  test_battery_low_battery.py  test_battery_soc.py  test_battery_titlebar_icon.py  test_black_level.py  test_black_level_lease.py  test_bloom_filter.py  test_build_identity.py  test_calc_utils.py  test_callbacks_time_gate.py  test_camera_interface.py  test_cat_images.py  test_catalog_cache.py  test_catalog_data.py  test_catalog_filter_cache.py  test_catalogs_t9.py  test_chart.py  test_chart_markers.py  test_clouds.py  test_comets.py  test_config_asteroid_migration.py  test_download_utils.py  test_dynamic_catalogs.py  test_equipment.py  test_focus.py  test_focus_preview.py  test_gps_time_sources.py  test_gps_time_sync.py  test_gps_time_sync_helper.py  test_gps_time_sync_status_ui.py  test_gps_ubx_parser.py  test_hardware_detect.py  test_imu2cam_tool_presets.py  (+65 more)
python/tools/: battery_runtime_analysis.py
python/views/: advanced.html  advanced.tpl  base.html  edit_eyepiece.html  edit_eyepiece.tpl  edit_instrument.tpl  equipment.html  equipment.tpl  footer.tpl  gps.html  gps.tpl  header.tpl  index.html  index.tpl  indi.tpl  location_form.html  location_form.tpl  locations.html  locations.tpl  login.html  login.tpl  logs.html  logs.tpl  network.html  network.tpl  network_item.tpl  obs_session_log.html  obs_session_log.tpl  obs_sessions.tpl  remote.html  remote.tpl  restart.tpl  restart_pifinder.tpl  starter.html  tools.html  tools.tpl
python/views2/: edit_instrument.html  equipment.html  index.html  location_form.html  locations.html  logs.html  network_item.html  obs_sessions.html  remote.html  restart.html  restart_pifinder.html  tools.html
(+546 files in other folders)
