[project]
name = "pifinder"
version = "0.0.0"
description = "PiFinder runtime dependencies (resolved by uv, realized into the Nix store via uv2nix)"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Scientific / astronomy core
    "numpy",
    "numpy-quaternion",
    "pyerfa",
    "scipy",
    "scikit-learn",
    "pillow",
    "pandas",
    "skyfield",
    "timezonefinder",
    "pytz",
    # Web / RPC
    "grpcio",
    "protobuf",
    "flask",
    "flask-babel",
    "waitress",
    "requests",
    "pyjwt",
    "aiofiles",
    "json5",
    "jsonschema",
    "libarchive-c",
    "tqdm",
    # System / IPC bindings
    "pygobject",
    "dbus-python",
    "av",
    "smbus2",
    "spidev",
    # sh 2.x changed the API; PiFinder targets the 1.x interface.
    "sh>=1.14,<2",
    "gpsdclient",
    "dataclasses-json",
    "pydeepskylog",
    "python-pam",
    # 0.3.0a0 (prerelease) is the version that builds on 3.13; its setup.py
    # and .so lookups are patched in the uv2nix override (see uv-python.nix).
    "python-libinput==0.3.0a0",
    # Display
    "luma-oled",
    "luma-lcd",
    # Hardware / camera
    "rpi-gpio",
    "rpi-hardware-pwm",
    "adafruit-blinka",
    "adafruit-circuitpython-bno055",
    "picamera2",
    "pidng",
    "simplejpeg",
    "python-prctl",
    "videodev2",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "luma-emulator",
    "pyhotkey",
    "selenium",
]

[tool.uv]
# Dependency-only workspace: the PiFinder source itself is deployed separately
# (pkgs/pifinder-src.nix), so uv must not try to build/install this root project.
package = false
# Deployment + dev are both Linux (aarch64 Pi, x86_64 dev); keep the lock focused.
environments = ["sys_platform == 'linux'"]

# python-libinput's setup.py imports the removed `imp` module, so uv cannot
# execute it to discover metadata. Declare it statically; the actual build is
# patched in the uv2nix override.
[[tool.uv.dependency-metadata]]
name = "python-libinput"
version = "0.3.0a0"
requires-dist = ["cffi"]

# python-prctl's setup.py aborts without libcap headers present; it has no
# runtime Python deps. libcap is supplied by the uv2nix build override.
[[tool.uv.dependency-metadata]]
name = "python-prctl"
version = "1.8.1"
requires-dist = []

[tool.ruff]
builtins = ["_"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "tetra3",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable preview mode, allow os.env changes before imports
preview = true

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F841"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
exclude = "venv|tetra3|conftest"
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
extra_checks = true

# Strongly recommend enabling this one as soon as you can
#check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
#disallow_subclassing_any = true
#disallow_untyped_decorators = true
#disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true

[[tool.mypy.overrides]]
module = [
    'board',
    'adafruit_bno055',
    'scipy.*',
    'luma.*',
    'skyfield.*',
    'sh.*',
    'sklearn.*',
    'PyHotKey.*',
    'PiFinder.tetra3.*',
    'tetra3.*',
    'grpc',
    'ceder_detect_pb2',
    'RPi.*',
    'picamera2',
    'bottle',
    'libinput',
    'pytz',
    'aiofiles',
    'requests',
    'tqdm',
    'pandas',
    'rpi_hardware_pwm',
    'gpsdclient',
    'timezonefinder',
    'pydeepskylog.*',
    'dbus',
    'pam',
    'pam.*',
    'quaternion',
    'gi',
    'gi.*',
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
    "tests/webserver",
]
markers = [
    "smoke",
    "unit",
    "integration",
    "web",
]
